--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "test": "node --run test:ava && node --run test:cafe",
     "test:cafe": "testcafe $BROWSER:headless tests/cafe/*-cafe.mjs --esm -s build/test --page-request-timeout 5000 --app-init-delay 8000 --app vite",
     "test:ava": "ava --timeout 4m tests/*-ava.mjs tests/*-ava-node.mjs",
-    "docs": "documentation readme --section=API ./src/**/*.mjs",
+    "docs": "documentation readme --section=API ./src/**/*.mjs && documentation readme --section=API ./src**/*.mjs",
     "lint": "node --run lint:docs",
-    "lint:docs": "documentation lint ./src/**/*.mjs",
+    "lint:docs": "documentation lint ./src**/*.mjs",
     "preview": "vite preview"
   },
   "devDependencies": {
