--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "mf-styling": "^3.2.16",
     "npm-pkgbuild": "^19.0.4",
     "semantic-release": "^25.0.2",
-    "svelte": "^5.44.0",
+    "svelte": "^5.45.2",
     "testcafe": "^3.7.2",
     "vite": "^7.2.4",
     "vite-plugin-compression2": "^2.3.1"
   },
   "peerDependencies": {
-    "svelte": "^5.44.0"
+    "svelte": "^5.45.2"
   },
   "optionalDependencies": {
     "mf-hosting-cloudflare": "^1.0.9",
@@ -68,7 +68,7 @@
   "bugs": {
     "url": "https://github.com/arlac77/svelte-command/issues"
   },
-  "homepage": "https://github.com/arlac77/svelte-command#readme",
+  "homepage": "",
   "pkgbuild": {
     "content": {
       "${install.dir}": "build/"
