--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "prepare": "node --run prepare:vite",
     "prepare:vite": "vite build",
     "start": "vite",
-    "test": "node --run test:ava && node --run test:cafe",
-    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*-cafe.mjs --esm -s build/test --page-request-timeout 5000 --app-init-delay 8000 --app vite",
+    "test": "node --run test:ava",
     "test:ava": "ava --timeout 4m tests/*-ava.mjs tests/*-ava-node.mjs",
     "docs": "documentation readme --section=API ./src**/*.mjs",
     "lint": "node --run lint:docs",
@@ -50,7 +49,6 @@
     "npm-pkgbuild": "^19.0.8",
     "semantic-release": "^25.0.2",
     "svelte": "^5.45.6",
-    "testcafe": "^3.7.2",
     "vite": "^7.2.6",
     "vite-plugin-compression2": "^2.4.0"
   },
