--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ build
 *.dump
 *.node
 .test
+/playwright/.auth/
 .tmp
 bun.lockb
 dist
+.last-run.json
+/playwright-report/
+/test-results/
+/blob-report/
+/playwright/.cache/
