--- a/.npmignore
+++ b/.npmignore
@@ -8,5 +8,12 @@ doc
 .github
 netlify.toml
 pkg
+playwright.config.js
 vite.config.mts
 dist
+.last-run.json
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
